Exportacion de modulos

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "main": "topics/about_asserts.js",
+  "main": "",
   "name": "javascript-koans",
   "description": "Update ======",
   "version": "1.0.0",
